--- a/cv.html
+++ b/cv.html
@@ -52,14 +52,18 @@
     <hr>
 
     <h3 style="text-align:center;">Work/Research experience</h3>
-    <p style="display: table;margin: 0 auto;text-align: left;">Discover Financial Services</p>
+    <p style="display: table;margin: 0 auto;text-align: left;"><b>Discover Financial Services</b>, Riverwoods, IL</p>
     <ul>
-        <li><em>Principal Research Scientist</em>, Discover Financial Services <span style="margin-left:1em"></span> Oct 2022 - Present</li>
-        <li><em>Lead Research Scientist</em>, Discover Financial Services <span style="margin-left:1em"></span> Oct 2021 - Oct 2022</li>
-        <li><em>Senior Modeler</em>, Discover Financial Services <span style="margin-left:1em"></span> Mar 2021 - Oct 2021</li>
-        <li><em>Modeler</em>, Discover Financial Services <span style="margin-left:1em"></span> Aug 2019 - Mar 2021</li>
-        <li><em>Associate Modeler</em>, Discover Financial Services <span style="margin-left:1em"></span> Nov 2018 - Aug 2019</li>
+        <li><em>Principal Research Scientist</em> <span style="margin-left:1em"></span> Oct 2022 - Present</li>
+        <li><em>Lead Research Scientist</em> <span style="margin-left:1em"></span> Oct 2021 - Oct 2022</li>
+        <li><em>Senior Modeler</em> <span style="margin-left:1em"></span> Mar 2021 - Oct 2021</li>
+        <li><em>Modeler</em> <span style="margin-left:1em"></span> Aug 2019 - Mar 2021</li>
+        <li><em>Associate Modeler</em> <span style="margin-left:1em"></span> Nov 2018 - Aug 2019</li>
+    </ul>
+    <ul>
         <li><em>Research Assistant</em>, University of Massachusetts Amherst <span style="margin-left:1em"></span> Summer 2016</li>
+    </ul>
+    <ul>
         <li><em>Student Intern</em> at FORTH - IACM, Crete, Greece <span style="margin-left:1em"></span> Summer 2012</li>
     </ul>
 
