--- a/cv.html
+++ b/cv.html
@@ -60,11 +60,13 @@
         <li><em>Modeler</em> <span style="margin-left:1em"></span> Aug 2019 - Mar 2021</li>
         <li><em>Associate Modeler</em> <span style="margin-left:1em"></span> Nov 2018 - Aug 2019</li>
     </ul>
+    <p style="display: table;margin: 0 auto;text-align: left;"><b>University of Massachusetts Amherst</b>, MA</p>
     <ul>
-        <li><em>Research Assistant</em>, University of Massachusetts Amherst <span style="margin-left:1em"></span> Summer 2016</li>
+        <li><em>Research Assistant</em> <span style="margin-left:1em"></span> Summer 2016</li>
     </ul>
+    <p style="display: table;margin: 0 auto;text-align: left;"><b>FORTH - IACM</b>, Crete, Greece</p>
     <ul>
-        <li><em>Student Intern</em> at FORTH - IACM, Crete, Greece <span style="margin-left:1em"></span> Summer 2012</li>
+        <li><em>Student Intern</em> <span style="margin-left:1em"></span> Summer 2012</li>
     </ul>
 
     <hr>
