--- a/cv.html
+++ b/cv.html
@@ -54,19 +54,15 @@
     <h3 style="text-align:center;">Work/Research experience</h3>
 
     <ul>
-        <p style="text-align: left;"><b>Discover Financial Services</b>, Riverwoods, IL</p>
+    <p style="text-align: left;"><b>Discover Financial Services</b>, Riverwoods, IL</p>
         <li><em>Principal Research Scientist</em> <span style="margin-left:1em"></span> Oct 2022 - Present</li>
         <li><em>Lead Research Scientist</em> <span style="margin-left:1em"></span> Oct 2021 - Oct 2022</li>
         <li><em>Senior Modeler</em> <span style="margin-left:1em"></span> Mar 2021 - Oct 2021</li>
         <li><em>Modeler</em> <span style="margin-left:1em"></span> Aug 2019 - Mar 2021</li>
         <li><em>Associate Modeler</em> <span style="margin-left:1em"></span> Nov 2018 - Aug 2019</li>
-    </ul>
-    <p style="display: table;margin: 0 auto;text-align: left;"><b>University of Massachusetts Amherst</b>, MA</p>
-    <ul>
+    <p style="text-align: left;"><b>University of Massachusetts Amherst</b>, MA</p>
         <li><em>Research Assistant</em> <span style="margin-left:1em"></span> Summer 2016</li>
-    </ul>
-    <p style="display: table;margin: 0 auto;text-align: left;"><b>FORTH - IACM</b>, Crete, Greece</p>
-    <ul>
+    <p style="text-align: left;"><b>FORTH - IACM</b>, Crete, Greece</p>
         <li><em>Student Intern</em> <span style="margin-left:1em"></span> Summer 2012</li>
     </ul>
 
