--- a/cv.html
+++ b/cv.html
@@ -104,10 +104,10 @@
 
     <h3 style="text-align:center;">Awards and Honors</h3>
     <ul>
-        <li>President's award, Discover Financial Services, March 2022</li>
-        <li>Excellence award, Discover Financial Services, November 2020</li>
-        <li>"STYLIANOS K. PICHORIDES" award, University of Crete, Greece, June 2012</li>
-        <li>Scholarship awarded from the State Scholarship Foundation (IKY), 2009 - 2010</li>
+        <li><em>President's award</em>, Discover Financial Services <span style="margin-left:5em"></span> March 2022</li>
+        <li><em>Excellence award</em>, Discover Financial Services <span style="margin-left:5em"></span> November 2020</li>
+        <li><em>"STYLIANOS K. PICHORIDES" award</em>, University of Crete, Greece <span style="margin-left:1em"></span> June 2012</li>
+        <li><em>Scholarship</em> awarded from the State Scholarship Foundation (IKY) <span style="margin-left:3em"></span> 2009 - 2010</li>
     </ul>
 
     <hr>
